[project]
authors = [{name = "Jeremy Delahanty", email = "delahantyj@janelia.hhmi.org"}]
dependencies = []
name = "metazebrobot_dashboard"
version = "0.1.0"
description = "Dashboard for MetaZebrobot data visualization"
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
metazebrobot_dashboard = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
streamlit = ">=1.44.0,<2"
polars = ">=1.26.0,<2"
plotly = ">=6.0.1,<7"
numpy = ">=2.2.4,<3"
rich = ">=13.9.4,<14"
scipy = ">=1.15.2,<2"
google-cloud-storage = ">=3.1.0,<4"
google-auth = ">=2.38.0,<3"
